# product_subscription

./: .gitignore  Gridsearch.ipynb  Intelligibilite.ipynb  PS2.ipynb  README.md  clean.ipynb  eda1.ipynb  pyproject.toml
data/interim/: .gitignore
notebooks/: Exploratory_Data_Analysis.ipynb  Gridsearch.ipynb  Intelligibilite.ipynb  PS_ClassesMethodes.ipynb  PS_EXPLO_FINAL.ipynb  Untitled.ipynb  clean_data.ipynb  eda1.ipynb  test_for_features.ipynb  test_main.ipynb  test_main_under.ipynb  test_main_with_num_to_cols.ipynb  test_models-Copy1.ipynb  test_models.ipynb  to_pipeline.ipynb  trees.ipynb
notebooks_dev/: Intelligibilite-Copy1.ipynb  PS_ClassesMethodes.ipynb  dont_follow.ipynb  test_main_sans_smote.ipynb
product_sub/: main.py  socioeco.py
product_sub/application/: main.py  main_old.py
product_sub/domain/: data_cleaning.py  feature_creator.py  feature_encoder.py  feature_selector.py  pipeline_creator.py
product_sub/infrastructure/: Test.py  bank_campaign.py  dataset_builder.py  eco_social.py
product_sub/settings/: .env  .env_template  __init__.py  base.py  utils.py
