[tool.poetry]
name = "productsubscription_eds_dm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
seaborn = "^0.11.0"
plotly = "^4.12.0"
nbformat = "^5.0.8"
ipywidgets = "^7.5.1"
notebook = "^6.1.4"
missingno = "^0.4.2"
scikit-learn = "^0.23.2"
setuptools = "^50.3.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
